--- a/tasks/post-conf-master-etcd.yml
+++ b/tasks/post-conf-master-etcd.yml
@@ -123,3 +123,14 @@
     state: absent
     backup: yes
     unsafe_writes: yes
+
+- name: post-conf-master-etcd | create etcd certs for prometheus
+  command: bash -x /usr/local/bin/etcd-scripts/make-ssl-etcd.sh  -f /etc/ssl/etcd/openssl.conf -d /etc/ssl/etcd/ssl/
+  environment:
+    HOSTS: etcd-prometheus
+
+# - name: post-conf-master-etcd | create etcd certs for prometheus
+#   command: /usr/local/bin/kubectl create namespace cattle-prometheus
+# 
+# - name: post-conf-master-etcd | create etcd certs for prometheus
+#   command: /usr/local/bin/kubectl -n cattle-prometheus create secret generic kube-etcd-client-certs --from-file=etcd-client-ca.crt=/etc/ssl/etcd/ssl/ca.pem --from-file=etcd-client.crt=/etc/ssl/etcd/ssl/node-etcd-prometheus.pem --from-file=etcd-client.key=/etc/ssl/etcd/ssl/node-etcd-prometheus-key.pem
